Update website pages, styles, and scripts

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <div class="top-social-links">
                     <a href="#" class="top-social-link"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="top-social-link"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="top-social-link"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com/in/kyle-jules-3kgl" class="top-social-link" target="_blank" rel="noopener noreferrer" aria-label="Power Flow LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#" class="top-social-link"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                         <div class="social-links">
                             <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
                             <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                            <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/kyle-jules-3kgl" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/kyle-jules-3kgl" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
