--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
                 <div class="top-social-links">
                     <a href="#" class="top-social-link"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="top-social-link"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="top-social-link"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com/in/kyle-jules-3kgl" class="top-social-link" target="_blank" rel="noopener noreferrer" aria-label="Power Flow LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#" class="top-social-link"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
@@ -416,11 +416,15 @@
                     <h3 class="footer-title">Power Flow Services Ltd</h3>
                     <p class="footer-description">Technical Maintenance Services & Equipment Supply. Reliable Service. Quality Equipment. Expert Solutions.</p>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/kyle-jules-3kgl" class="social-link" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
+                    <p class="follow-text mt-3" style="font-size:0.95rem;">
+                        <i class="fab fa-linkedin me-1"></i>
+                        <a href="https://www.linkedin.com/in/kyle-jules-3kgl" target="_blank" rel="noopener noreferrer">Kyle Jules on LinkedIn</a>
+                    </p>
                 </div>
                 <div class="footer-column">
                     <h4 class="footer-heading">Quick Links</h4>
